fixed z-index, so that panel appears on top of chat elements

--- a/clients/desktop/src/app/contact-info/contact-info.component.scss
+++ b/clients/desktop/src/app/contact-info/contact-info.component.scss
@@ -3,7 +3,7 @@
 #wrapper {
   width: 300px;
   margin: 0 auto;
-  z-index: 99;
+  z-index: 101;
 }
 
 #close {
